...
                              readOnly: true,
                              labelText: "Пин-код",
                              initialValue: "••••",
                              onTap: vm.changePincode,
                            ),
                            const SizedBox(height: 20),
                            // Кнопка "Мои дети"
                            OutlinedButton.icon(
                              onPressed: vm.navigateToChildren,
                              icon: const Icon(Icons.child_care),
                              label: const Text('Мои дети'),
                              style: OutlinedButton.styleFrom(
                                minimumSize: const Size(double.infinity, 60),
...
                                  ),
                                ),
                                minimumSize: const WidgetStatePropertyAll(
                                  Size(double.infinity, 60),
                                ),
                              ),
                              child: const Text("Сохранить"),
                            ),
                            const SizedBox(height: 20),
                          ],
                        ),
                      ),
                    ),
...
