...
                        onPressed: (context) => vm.paramAction(
                          NannyAdminApi.deleteOtherParametr(
                            OtherParametr(id: e.id),
                          ),
                        ),
                        icon: Icons.delete,
                        label: "Удалить",
                        backgroundColor: Colors.red,
                      )
                    ],
                  ),
                  child: Column(
                    children: [
...
