...
                  ),
                ),
                minimumSize: const WidgetStatePropertyAll(
                  Size(double.infinity, 60),
                ),
              ),
              child: const Text("Войти"),
            ),
            const SizedBox(height: 20),
            ElevatedButton(
              style: NannyButtonStyles.whiteButton.copyWith(
                shape: WidgetStatePropertyAll(
                  RoundedRectangleBorder(
...
                ),
                minimumSize: const WidgetStatePropertyAll(
                  Size(double.infinity, 60),
                ),
              ),
              onPressed: vm.navigateToReg,
              child: const Text("Зарегистрироваться"),
            ),
          ],
        ),
      )),
    );
  }
...
